Merge pull request #27
* upgrade-spring-boot-to-4-and-java-to-25